# mobile-challenge

./: .clang-format  CMakeLists.txt  README.md  px.pc.in
example/: CMakeLists.txt  main.c
include/px/: frame.h  px.h  video.h
src/px/: frame.c  frame_internal.h  px.c  video.c  video_internal.h
